Fix language caret alignment with the one in user menu

--- a/src/sass/_common/header.scss
+++ b/src/sass/_common/header.scss
@@ -25,6 +25,9 @@ body #topbar {
     #select_language {
         top: -3px;
     }
+    .nav-caret {
+        margin-right: 0;
+    }
 }
 
 body #topbar, .landing_page-content {
